[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
dotenv = "0.15"
scraper = "0.19"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.41"
urlencoding = "2.1.3"
regex = "1.11.1"
