[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
dotenv = "0.15"
scraper = "0.19"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.41"
urlencoding = "2.1.3"
redis = { version = "0.32", features = ["aio", "tokio-comp"] }
sha2 = "0.10.9"
hex = "0.4.3"
governor = "0.10.1"
rocket-governor = "0.2.0-rc.4"
