[package]
name = "headcrab"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.18"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
deadpool-postgres = "0.10"